--- a/css/main.css
+++ b/css/main.css
@@ -421,7 +421,8 @@ div[id^=chevron_container_]{
 
 /* media query redo starts */
 @media only screen 
-and (max-width : 700px){
+and (min-width : 200px) and 
+(max-width : 700px){
     
     
     #contact_container{
