--- a/css/main.css
+++ b/css/main.css
@@ -420,18 +420,28 @@ div[id^=chevron_container_]{
 }
 
 /* media query redo starts */
-@media only screen 
-and (min-width : 200px) and 
+@media only screen and 
 (max-width : 700px){
     
     
     #contact_container{
-    width:100%;
+    width:auto;
     font-size:1.3rem;
     }
     #top_row_container{
     font-size:1.3rem;
     height:7%;
+    }
+    #top_row_element_0{
+        margin:0;
+        position: relative;
+        top: 16px;
+        left: 13px;
+    }
+    #top_row_element_1{
+        margin:0;
+        position: relative;
+        top: 16px;
     }
     #top_row_element_2{
         font-size:3rem;
@@ -441,21 +451,27 @@ and (min-width : 200px) and
         top:61px;
     }
     #search_icon{
-        top: 24.8%;
-        left: 36%;
+        position:relative;
+        top: 7px;
+        left: 40%;
         font-size: 16px;
+        z-index: 1;
     }
     #search{
         font-size:1.3rem;
+        position: relative;
+        left: -8px;
+        margin: 0;
+        top: 9px;
     }
     #names_container{
         top:118px;
     }
     div[id^=abc_container_]{
-        font-size:2rem;
+        font-size:1.6rem;
     }
     .inner_contact_container{
-        font-size:2rem;
+        font-size:1.6rem;
         margin-top:0;
         padding-bottom: 0.5rem;
     }
@@ -465,13 +481,131 @@ and (min-width : 200px) and
     
     #right_column_letters_container{
         font-size:14px;
-        margin-top:38%;
+        margin: 0;
+        position: relative;
+        top: 137px;
     }
-    
-    
 }
 
+@media only screen and (max-width : 580px){
+    #search_icon{
+        left:38%;
+    }
+}
 
+@media only screen and (max-width : 460px){
+    #search_icon{
+        left:36%;
+    }
+}
+
+@media only screen and (max-width : 380px){
+    #search_icon{
+        left:34%;
+    }
+}
+
+@media only screen and (max-width : 322px){
+    #search_icon{
+        left:32%;
+    }
+}
+
+@media only screen and (max-width : 320px){
+    #search_icon{
+        left: 32%;
+        top: 7px;
+    }
+    #search{
+        left: -8px;
+        top: 9px;
+    }
+}
+
+@media only screen and (max-width : 314px){
+    #search_icon{
+        left: -16%;
+        top: 12px;
+    }
+    #search{
+        left: 0px;
+        top: -14px;
+    }
+}
+
+@media only screen and (max-width : 265px){
+   #top_row_container {
+        font-size: 1rem;
+        height: 6%;
+    }
+    #top_row_element_0{
+        left: 3px;
+    }
+    #top_row_element_2 {
+        font-size: 2rem;
+        margin-top: 4px;
+    }
+    #search_container {
+        top: 53px;
+    }
+    #search {
+        font-size: 1rem;
+        left: -6px;
+        top: 9px;
+    }
+    #search_icon{
+        font-size:12px;
+        left: 32%;
+        top: 8px;
+    }
+    #names_container {
+        top: 110px;
+    }
+    div[id^=abc_container_] {
+        font-size: 1.3rem;
+    }
+    .inner_contact_container {
+        font-size: 1.3rem;
+    }
+    #right_column_letters_container{
+        font-size:10px;
+    }
+}
+
+@media only screen and (max-width : 240px){
+    #search {
+        font-size: 1rem;
+        left: 0px;
+        top: -17px;
+    }
+    #search_icon {
+        font-size: 12px;
+        left: -18%;
+        top: 9px;
+    }
+}
+
+@media only screen and (max-width : 226px){
+    #top_row_element_0 {
+        left: 1px;
+    }
+    #search_icon {
+        left: -24%;
+    }
+    p[id^=letter_container_]{
+        padding-left:.5rem;
+    }
+    div[id^=abc_container_]{
+        font-size:.8rem;
+    }
+    .inner_contact_container{
+        margin-left: .5rem;
+        font-size:.8rem;
+    }
+    #right_column_letters_container {
+        font-size: 7px;
+    }
+}
 
 /*media querry side by side fix*/
 /*
